--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "eokulik_brain_games"
-version = "0.1.2"
+version = "0.1.3"
 description = ""
 authors = ["Your Name <you@example.com>"]
 packages = [
@@ -10,12 +10,15 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.6"
 prompt = "^0.4.1"
+colorama = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.14.0"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
