--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "eokulik_brain_games"
-version = "0.1.4"
+version = "0.1.5"
 description = ""
 authors = ["Your Name <you@example.com>"]
 packages = [
@@ -19,6 +19,7 @@ wemake-python-styleguide = "^0.14.0"
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
