--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,16 @@
 [tool.poetry]
 name = "eokulik_brain_games"
 version = "0.1.7"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Console brain games"
+authors = ["Eugeny Okulik <tiburon854@gmail.com>"]
+repository = "https://github.com/eokulik/python-project-lvl1"
+classifiers = [
+    "Development Status :: 4 - Beta"
+    "Environment :: Console"
+    "Programming Language :: Python :: 3"
+    "Topic :: Games/Entertainment"
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
 packages = [
   { include = "brain_games" },
 ]
@@ -14,6 +22,10 @@ colorama = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.14.0"
+
+[[tool.poetry.source]]
+name = 'Test Pypi'
+url = 'https://test.pypi.org/simple'
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
