--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "eokulik_brain_games"
-version = "0.1.7"
+version = "0.1.8"
 description = "Console brain games"
 authors = ["Eugeny Okulik <tiburon854@gmail.com>"]
 repository = "https://github.com/eokulik/python-project-lvl1"
 classifiers = [
-    "Development Status :: 4 - Beta"
-    "Environment :: Console"
-    "Programming Language :: Python :: 3"
-    "Topic :: Games/Entertainment"
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Programming Language :: Python :: 3",
+    "Topic :: Games/Entertainment",
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 packages = [
